refactord styling fot all select employee files to fix styling on small screens

--- a/components/SelectEmployee.module.css
+++ b/components/SelectEmployee.module.css
@@ -1,16 +1,25 @@
 .backgroundColor {
 	background-color: var(--third-color); /* Your desired color */
 	color: var(--text-color); /* Adjust as needed */
-	height: 93vh;
+	/* min-height: 100vh; */
+	height: 100%;
 	display: flex;
 	justify-content: center;
-	align-items: center;
+	/* align-items: center; */
+}
+
+.background {
+	background-color: var(--third-color); /* Your desired color */
+	color: var(--text-color); /* Adjust as needed */
+	min-height: 100vh;
+	height: 100%;
 }
 
 .centerContainer {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	margin: auto;
 }
 
 .formContainer {
@@ -23,7 +32,8 @@
 	border: solid var(--primary-color) 5px;
 	padding: 30px 40px;
 	border-radius: 15%;
-	margin: 20px;
+	margin: auto;
+	margin-bottom: 20px;
 }
 
 .scrollableContainer {
@@ -72,19 +82,20 @@
 
 .selectEmp {
 	width: 425px;
+	margin: auto;
 }
 
 @media screen and (max-width: 540px) {
 	.formContainer {
-		max-width: 300px;
-		min-width: 300px;
+		max-width: auto;
+		min-width: auto;
 		min-height: 500px;
 		max-height: 50px;
 	}
 
 	.formContainerMobile {
-		max-width: 300px;
-		min-width: 300px;
+		max-width: auto;
+		min-width: auto;
 		min-height: 50vh;
 		max-height: 50px;
 	}
@@ -105,6 +116,19 @@
 	}
 }
 
+@media screen and (min-width: 990px) and(max-width: 1271px) {
+	.formContainer {
+		max-width: 500px;
+		min-width: auto;
+	}
+	.formContainerMobile {
+		max-width: 500px;
+		min-width: 500px;
+		min-height: 50vh;
+		max-height: 50px;
+	}
+}
+
 @media screen and (min-height: 900px) {
 	.scrollableContainerMobile {
 		max-height: 300px;
@@ -114,15 +138,23 @@
 }
 @media screen and (min-height: 700px) and (max-height: 900px) {
 	.scrollableContainerMobile {
-		max-height: 290px;
+		max-height: 325px;
 		overflow-y: auto;
 		overflow-x: hidden;
 	}
 }
-
+/* 
 @media screen and (max-height: 700px) {
 	.scrollableContainerMobile {
 		max-height: 200px;
+		overflow-y: auto;
+		overflow-x: hidden;
+	}
+} */
+
+@media screen and (min-height: 375px) and (max-height: 700px) {
+	.scrollableContainerMobile {
+		max-height: 175px;
 		overflow-y: auto;
 		overflow-x: hidden;
 	}
